# sovereign-agent

./: .env.example  .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  MANIFEST-CRITICAL.txt  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
chapters/: README.md
chapters/chapter_01_session/: README.md  demo.py  solution.py  starter.py  tests.py
chapters/chapter_02_queue/: README.md  demo.py  solution.py  starter.py  tests.py
chapters/chapter_03_ipc/: README.md  demo.py  solution.py  starter.py  tests.py
chapters/chapter_04_scheduler/: README.md  demo.py  solution.py  starter.py  tests.py
chapters/chapter_05_planner_executor/: README.md  demo.py  solution.py  starter.py  tests.py
docs/: API.md  api_reference.md  architecture.md  deployment.md  index.md  quickstart.md
docs/chapters/: index.md
examples/classifier_rule/: README.md  run.py
examples/code_reviewer/: README.md  run.py
examples/hitl_deposit/: README.md  run.py
examples/isolated_worker/: README.md  run.py
examples/parallel_research/: README.md  run.py
examples/pub_booking/: README.md  run.py
examples/research_assistant/: README.md  run.py
examples/session_resume_chain/: README.md  run.py
lessons/: README.md
lessons/_template/: LESSON.yaml  README.md  compare.py  implementation.py
scripts/: ci_real.py  doctor.py  flatten.py  pre_publish.py  preflight.py  verify_setup.py
sovereign_agent/: __init__.py  config.py  discovery.py  errors.py
sovereign_agent/_internal/: __init__.py  atomic.py  extras.py  isolation.py  landlock_shim.py  llm_client.py  paths.py
sovereign_agent/cli/: __init__.py
sovereign_agent/executor/: __init__.py
sovereign_agent/halves/: __init__.py  loop.py  structured.py  verifiers.py
sovereign_agent/handoff/: __init__.py
sovereign_agent/ipc/: __init__.py  approval.py  protocol.py  watcher.py
sovereign_agent/memory/: __init__.py
sovereign_agent/observability/: __init__.py  judges.py  report.py  trace.py
sovereign_agent/orchestrator/: __init__.py  credentials.py  main.py  mounts.py  worker.py  worker_entrypoint.py
sovereign_agent/planner/: __init__.py
sovereign_agent/scheduler/: __init__.py  drift_corrected.py
sovereign_agent/session/: __init__.py  directory.py  queue.py  resume.py  state.py
sovereign_agent/tickets/: __init__.py  manifest.py  state.py  ticket.py
sovereign_agent/tools/: __init__.py  registry.py
sovereign_agent/tools/builtin/: __init__.py
sovereign_agent/voice/: __init__.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_examples.py  test_real_path_mocked.py
tests/unit/: test_approval.py  test_config.py  test_discovery.py  test_errors.py  test_executor.py  test_halves.py  test_handoff.py  test_ipc.py  test_isolation.py  test_parallelism.py  test_planner.py  test_queue.py  test_resume.py  test_scheduler.py  test_session.py  test_tickets.py  test_tools.py  test_verifiers.py  test_worker.py
tools/: verify_chapter_drift.py
